--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-color: gray;
+  background-image: url("https://wallpapercave.com/wp/wp5969990.jpg");
   display: flex;
   align-items: center;
   justify-content: center;
@@ -15,12 +15,14 @@ h1 {
   margin-top: 5vh;
 }
 .container {
-  background-color: rgb(226, 224, 224);
+  background-color: rgb(35, 57, 93);
   height: 80%;
   width: 80%;
   margin-top: 7vh;
   display: flex;
   flex-direction: column;
+  border-radius: 10px;
+  border: 1px solid black;
 }
 
 .blank {
